--- a/index.html
+++ b/index.html
@@ -3,228 +3,240 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Luis Blasco — Portfolio</title>
+<title>Luis Blasco — Industrial Designer</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700;900&family=Inter:wght@300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
 
 :root{
-  --bg:#f6f4ef;
+  --bg:#f7f6f2;
   --text:#111;
   --muted:#666;
-  --accent:#c2a36b;
+  --line:#e5e3dc;
 }
 
 body{
   font-family:'Inter',sans-serif;
   background:var(--bg);
   color:var(--text);
-  overflow-x:hidden;
+  line-height:1.6;
 }
 
-/* Loader minimal */
-.loader{
-  position:fixed;
-  inset:0;
-  background:var(--bg);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  z-index:9999;
-  transition:1s;
-}
-.loader h1{
-  font-family:'Playfair Display',serif;
-  font-size:2rem;
-  letter-spacing:3px;
-}
-
-/* Header minimal */
 header{
   position:fixed;
   width:100%;
-  padding:40px 8%;
+  padding:30px 10%;
   display:flex;
   justify-content:space-between;
+  background:rgba(247,246,242,0.9);
+  backdrop-filter:blur(6px);
+  border-bottom:1px solid var(--line);
   z-index:100;
-  font-size:.85rem;
 }
 
-nav a{
-  margin-left:30px;
+header a{
   text-decoration:none;
   color:var(--text);
-  position:relative;
+  font-size:.85rem;
+  margin-left:30px;
 }
 
-nav a:hover{
-  color:var(--accent);
-}
-
-/* Sections */
 section{
-  padding:180px 12%;
-  min-height:100vh;
+  padding:160px 10%;
 }
 
-/* HERO artístico */
-#hero{
-  display:flex;
-  align-items:center;
+.hero{
+  padding-top:220px;
 }
 
-#hero h1{
+.hero h1{
   font-family:'Playfair Display',serif;
-  font-size:6rem;
-  line-height:1.05;
-  max-width:900px;
+  font-size:4.5rem;
+  font-weight:600;
 }
 
-#hero p{
-  margin-top:40px;
-  font-size:1.2rem;
+.hero p{
+  margin-top:20px;
   color:var(--muted);
 }
 
-/* Asimetría */
-.split{
-  display:grid;
-  grid-template-columns:1fr 1.2fr;
-  gap:100px;
-  align-items:center;
+.projects{
+  border-top:1px solid var(--line);
 }
 
-.split.reverse{
-  grid-template-columns:1.2fr 1fr;
+.project{
+  margin-bottom:120px;
+  text-decoration:none;
+  color:inherit;
+  display:block;
 }
 
-.split img{
+.project img{
   width:100%;
-  transform:scale(1.05);
-  transition:1.4s ease;
+  margin-bottom:20px;
+  transition:.6s ease;
 }
 
-.split:hover img{
-  transform:scale(1);
+.project:hover img{
+  transform:scale(1.02);
 }
 
-/* Texto reveal */
+.project h2{
+  font-family:'Playfair Display',serif;
+  font-size:2rem;
+  margin-bottom:10px;
+}
+
+.project p{
+  color:var(--muted);
+}
+
+.about{
+  border-top:1px solid var(--line);
+  max-width:800px;
+}
+
+.about h2{
+  font-family:'Playfair Display',serif;
+  font-size:2rem;
+  margin-bottom:40px;
+}
+
+.about p{
+  margin-bottom:20px;
+  color:#444;
+}
+
+.about-highlight{
+  margin-top:40px;
+  font-weight:500;
+}
+
+.contact{
+  border-top:1px solid var(--line);
+}
+
+.contact h2{
+  font-family:'Playfair Display',serif;
+  font-size:2rem;
+  margin-bottom:40px;
+}
+
+.contact a{
+  display:block;
+  margin-bottom:15px;
+  text-decoration:none;
+  color:var(--text);
+}
+
+footer{
+  text-align:center;
+  padding:80px 0;
+  font-size:.8rem;
+  color:var(--muted);
+  border-top:1px solid var(--line);
+}
+
 .reveal{
   opacity:0;
-  transform:translateY(60px);
-  transition:1.2s cubic-bezier(.19,1,.22,1);
+  transform:translateY(40px);
+  transition:1s ease;
 }
+
 .reveal.active{
   opacity:1;
   transform:translateY(0);
 }
 
-/* CV estilo editorial */
-#cv p{
-  font-size:1.1rem;
-  margin-bottom:20px;
-  max-width:600px;
-}
-
-/* Contact */
-button{
-  margin-top:40px;
-  padding:15px 40px;
-  border:1px solid var(--text);
-  background:none;
-  font-size:.9rem;
-  cursor:pointer;
-  transition:.4s;
-}
-button:hover{
-  background:var(--text);
-  color:white;
-}
-
-footer{
-  text-align:center;
-  padding:100px 0;
-  font-size:.8rem;
-  color:var(--muted);
+@media(max-width:900px){
+  .hero h1{
+    font-size:3rem;
+  }
 }
 </style>
 </head>
 
 <body>
 
-<div class="loader"><h1>Luis Blasco</h1></div>
-
 <header>
-  <div>LUIS BLASCO</div>
+  <div><strong>Luis Blasco</strong></div>
   <nav>
+    <a href="#work">Proyectos</a>
     <a href="#about">Sobre mí</a>
-    <a href="#work">Trabajo</a>
-    <a href="#cv">CV</a>
     <a href="#contact">Contacto</a>
   </nav>
 </header>
 
-<section id="hero">
-  <div>
-    <h1 class="reveal">Industrial Design as narrative, material and tension.</h1>
-    <p class="reveal">Luis Blasco Ibañez Berbel — Valencia — 24 años</p>
-  </div>
+<section class="hero reveal">
+  <h1>Luis Blasco</h1>
+  <p>Industrial Design · Function · Structure · Material</p>
 </section>
 
-<section id="about">
-  <div class="split">
-    <div class="reveal">
-      <h2>Sobre mí</h2>
-      <p>
-        Graduado en Diseño Industrial por la UPV.
-        Formación inicial en la UJI y FP en Electricidad.
-        Trabajo desde la tensión entre técnica y expresión formal.
-      </p>
-    </div>
-    <img src="https://via.placeholder.com/800x1000">
-  </div>
+<section id="work" class="projects">
+  <a href="#" class="project reveal">
+    <img src="https://via.placeholder.com/1200x700">
+    <h2>Sistema Modular</h2>
+    <p>Desarrollo estructural optimizado para producción industrial.</p>
+  </a>
+
+  <a href="#" class="project reveal">
+    <img src="https://via.placeholder.com/1200x700">
+    <h2>Mecanismo Compacto</h2>
+    <p>Solución técnica enfocada en eficiencia y ensamblaje.</p>
+  </a>
+
+  <a href="#" class="project reveal">
+    <img src="https://via.placeholder.com/1200x700">
+    <h2>Producto Formal</h2>
+    <p>Exploración material con coherencia estructural.</p>
+  </a>
+
+  <a href="#" class="project reveal">
+    <img src="https://via.placeholder.com/1200x700">
+    <h2>Concepto Experimental</h2>
+    <p>Propuesta contemporánea con viabilidad industrial.</p>
+  </a>
 </section>
 
-<section id="work">
-  <div class="split reverse">
-    <img src="https://via.placeholder.com/1000x700">
-    <div class="reveal">
-      <h2>Proyecto 01</h2>
-      <p>Exploración de estructura, función y materialidad.</p>
-    </div>
-  </div>
+<section id="about" class="about reveal">
+  <h2>Sobre mí</h2>
+
+  <p>
+    Soy diseñador industrial graduado en la UPV de Valencia,
+    con formación inicial en la UJI y base técnica en electricidad.
+  </p>
+
+  <p>
+    Mi enfoque combina estructura y forma, desarrollando productos
+    donde la lógica constructiva y la claridad formal trabajan juntas.
+  </p>
+
+  <p>
+    Me interesa el diseño como proceso: analizar, iterar y materializar
+    soluciones viables, optimizadas y coherentes.
+  </p>
+
+  <p class="about-highlight">
+    Busco incorporarme a un estudio donde pueda aportar criterio técnico
+    y sensibilidad contemporánea en el desarrollo de producto.
+  </p>
 </section>
 
-<section id="cv">
-  <h2 class="reveal">Curriculum</h2>
-  <p class="reveal">Grado en Diseño Industrial — UPV Valencia</p>
-  <p class="reveal">Inicio en UJI Castellón</p>
-  <p class="reveal">FP Electricidad</p>
-</section>
-
-<section id="contact">
-  <h2 class="reveal">Contacto</h2>
-  <button class="reveal">Escribir mensaje</button>
+<section id="contact" class="contact reveal">
+  <h2>Contacto</h2>
+  <a href="mailto:tucorreo@email.com">tucorreo@email.com</a>
+  <a href="#">LinkedIn</a>
+  <a href="#">Descargar CV</a>
+  <p>Valencia, España</p>
 </section>
 
 <footer>
-  © 2026 Luis Blasco — Portfolio
+  © 2026 Luis Blasco — Industrial Designer
 </footer>
 
 <script>
-/* Loader */
-window.addEventListener("load",()=>{
-  setTimeout(()=>{
-    document.querySelector(".loader").style.opacity="0";
-    setTimeout(()=>{
-      document.querySelector(".loader").style.display="none";
-    },1000);
-  },1200);
-});
-
-/* Reveal */
 function reveal(){
   document.querySelectorAll(".reveal").forEach(el=>{
     if(el.getBoundingClientRect().top < window.innerHeight-100){
@@ -233,6 +245,7 @@ function reveal(){
   });
 }
 window.addEventListener("scroll",reveal);
+window.addEventListener("load",reveal);
 </script>
 
 </body>
